# rectangle-pack

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bin_section.rs  bin_split.rs  box_size_heuristics.rs  grouped_rects_to_place.rs  layered_rect_groups.rs  lib.rs  packed_location.rs  rect_to_insert.rs  target_bin.rs  width_height_depth.rs
src/bin_section/: overlaps.rs
src/target_bin/: coalesce.rs  push_available_bin_section.rs
