[package]
name = "rectangle-pack"
version = "0.4.2"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"
keywords = ["texture", "atlas", "bin", "box", "packer"]
description = "A general purpose, deterministic bin packer designed to conform to any two or three dimensional use case."
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/rectangle-pack"

[features]
default = ["std"]
std = []
